# network_universal_commander

./: .env.example  .gitignore  Cargo.toml  package-lock.json
frontend/network_universal_commander/: .gitignore  package-lock.json  package.json
frontend/network_universal_commander/src/app/: globals.css  page.tsx
frontend/network_universal_commander/src/app/login/: Login.module.css  Login.tsx  index.tsx
frontend/network_universal_commander/src/app/pages/: index.tsx
frontend/network_universal_commander/src/app/register/: Register.module.css  Register.tsx  index.tsx
frontend/network_universal_commander/src/app/types/: auth.tsx
src/: main.rs  main_local.rs
src/models/: basic.rs  mod.rs
src/server_local/: main_local.rs  mod.rs  router_func.rs  router_init.rs
