[package]
name = "network_universal_commander"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["tokio", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros"] }
bcrypt = "0.15.1"
tower = "0.5.1"
dotenv = "0.15"
serde_urlencoded = "0.7"
once_cell = "1.18.0"