[package]
name = "network_universal_commander"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["tokio", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "macros", "sqlite"] }
bcrypt = "0.15.1"
tower = "0.5.1"
dotenv = "0.15"
serde_urlencoded = "0.7"
once_cell = "1.18.0"
log = "0.4"
chrono = "0.4.24"
actix-web = "4"

base64 = "0.22.1"
itertools = "0.13.0"
rand = "0.8.5"
regex = "1.11.0"
regex-syntax = "0.8.5"